@@ -1,0 +1,55 @@
+package Paws::CloudSearchDomain::Stats;
+  use Moose;
+  with 'Paws::API::StrToObjMapParser';
+
+  has Map => (is => 'ro', isa => 'HashRef[Paws::CloudSearchDomain::FieldStats]');
+1;
+
+### main pod documentation begin ###
+
+=head1 NAME
+
+Paws::CloudSearchDomain::Stats
+
+=head1 USAGE
+
+This class represents one of two things:
+
+=head3 Arguments in a call to a service
+
+Use the attributes of this class as arguments to methods. You shouldn't make instances of this class. 
+Each attribute should be used as a named argument in the calls that expect this type of object.
+
+As an example, if Att1 is expected to be a Paws::CloudSearchDomain::Stats object:
+
+  $service_obj->Method(Att1 => { key1 => $value, ..., keyN => $value  });
+
+=head3 Results returned from an API call
+
+Use accessors for each attribute. If Att1 is expected to be an Paws::CloudSearchDomain::Stats object:
+
+  $result = $service_obj->Method(...);
+  $result->Att1->Map->{ key1 }
+
+=head1 DESCRIPTION
+
+The statistics calculated in the request.
+
+=head1 ATTRIBUTES
+
+=head2 Map => L<Paws::CloudSearchDomain::FieldStats>
+
+Use the Map method to retrieve a HashRef to the map
+
+=head1 SEE ALSO
+
+This class forms part of L<Paws>, describing an object used in L<Paws::CloudSearchDomain>
+
+=head1 BUGS and CONTRIBUTIONS
+
+The source code is located here: https://github.com/pplu/aws-sdk-perl
+
+Please report bugs to: https://github.com/pplu/aws-sdk-perl/issues
+
+=cut
+
