@@ -41,6 +41,7 @@
  - Lambda update: support for VPC
  - CloudFormation API update: tagging support + RetainResources on delete
  - CloudFront ACM cert support
+ - CloudSearch API update: stats
 
 0.21 16 Dec 2015
  - Bug fix: calls supposed to not return any object were failing since 0.21 (jare)
